--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "deploy-storybook": "storybook-to-ghpages",
-    "build": "tsc -b && vite build",
+    "build": "storybook build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
