--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - master
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -15,14 +20,11 @@ jobs:
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
-          node-version: 20
+          node-version: '20.x'
 
-     - run: npm ci
-
-     - run: npm run build
-
-     - name: Deploy storybook
-       working-directory: ./packages/docs
-       run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
-       env:
-         GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
+      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+        with:
+          install_command: npm ci
+          build_command: npm run build-storybook
+          path: storybook-static
+          checkout: false
