--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -13,6 +13,7 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
      - name: Checkout
        uses: actions/checkout@v4
@@ -22,8 +23,9 @@ jobs:
        with:
           node-version: '20.x'
 
-      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
-        with:
+    - name: Build Storybook
+       uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+       with:
           install_command: npm ci
           build_command: npm run build-storybook
           path: storybook-static
