--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -11,9 +11,8 @@ permissions:
   id-token: write
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
      - name: Checkout
        uses: actions/checkout@v4
@@ -23,7 +22,7 @@ jobs:
        with:
           node-version: '20.x'
 
-    - name: Build Storybook
+     - name: Build Storybook
        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
        with:
           install_command: npm ci
