--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,5 +27,5 @@ jobs:
        with:
           install_command: npm ci
           build_command: npm run build
-          path: storybook-static
+          path: ./packages/docs/storybook-static
           checkout: false
