--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,5 +27,8 @@ jobs:
        with:
           install_command: npm ci
           build_command: npm run build
+          env:
+            TURBO_TOKEN: EIeM8IMtp9GBe5SCwpR4TNFB
+            TURBO_TEAM: dafaz
           path: ./packages/docs/storybook-static
           checkout: false
