--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -13,11 +13,11 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
-      env: 
-        TURBO_TOKEN:EIeM8IMtp9GBe5SCwpR4TNFB 
-        TURBO_TEAM:dafaz
 
+     env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+    #  TURBO_REMOTE_ONLY: true
     steps:
      - name: Checkout
        uses: actions/checkout@v4
