--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -26,6 +26,8 @@ jobs:
        uses: actions/setup-node@v4
        with:
           node-version: '20.x'
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
      - name: Build Storybook
        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
