--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -36,9 +36,10 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "react-docgen-typescript-plugin": "^1.0.2-canary.f7e28c0.0",
     "storybook": "^8.4.3",
     "storybook-dark-mode": "^4.0.2",
-    "typescript": "~5.6.2",
+    "typescript": "4.2.4",
     "vite": "^5.4.10"
   },
   "eslintConfig": {
