--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -16,6 +16,7 @@
     "@dafaz-ui/eslint-config": "*",
     "@dafaz-ui/react": "*",
     "@dafaz-ui/tokens": "*",
+    "@phosphor-icons/react": "^2.1.7",
     "@storybook/addon-a11y": "^8.4.4",
     "polished": "^4.3.1",
     "react": "^18.3.1",
