feat: Add new features, Multiselect...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "workbench.colorTheme": "poimandres",
+  "workbench.colorTheme": "Min Dark",
   "workbench.preferredDarkColorTheme": "poimandres",
-  "workbench.preferredLightColorTheme": "poimandres"
+  "workbench.preferredLightColorTheme": "Min Dark",
+  "window.autoDetectColorScheme": false
 }
