--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "turbo run build",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=!@dafaz-ui/docs --filter=!@dafaz-ui/teste && changeset publish"
+    "release": "turbo run build --filter=!@dafaz-ui/docs --filter=@dafaz-ui/teste && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
