--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "public",
   "baseBranch": "master",
   "updateInternalDependencies": "patch",
-  "ignore": ["@dafaz-ui/docs","@dafaz-ui/teste"]
+  "ignore": ["@dafaz-ui/docs"]
 }
